Improve layout. Fix whitespace. Add npm scripts.

--- a/src/Etymology.Web/Client/css/index.css
+++ b/src/Etymology.Web/Client/css/index.css
@@ -161,8 +161,11 @@ a.text-white, a.text-white:visited {
 }
 
 .etymology-stat div {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 0;
+}
+
+.etymology-stat h3 {
+    margin-top: 10px;
 }
 
 .etymology-result ul {
